tests/paczka1/fuzzy1/54936118.err
Error in line 2: MsC S798 25,8
Error in line 10: GmU4nP2B49H S798 43,7
Error in line 30: GmU4nP2B49H S745 57,2
Error in line 33: S745 S798 36,8
Error in line 32: RZqa S745 50,3
